Add BTC 5m engine, safety checklist, and observability UI

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,31 @@ STRATEGY_VARIANT=baseline
 INTELLIGENCE_GATE_ENABLED=true
 INTELLIGENCE_GATE_MAX_STALENESS_MS=3000
 INTELLIGENCE_GATE_MIN_MARGIN=0
+INTELLIGENCE_GATE_CONFIRMATION_WINDOW_MS=5000
+INTELLIGENCE_GATE_REQUIRE_PEER_CONFIRMATION=true
+INTELLIGENCE_GATE_STRONG_MARGIN=0.01
+
+# Concentration + utilization controls (paper ledger)
+SIM_STRATEGY_CONCENTRATION_CAP_PCT=0.35
+SIM_FAMILY_CONCENTRATION_CAP_PCT=0.60
+SIM_GLOBAL_UTILIZATION_CAP_PCT=0.90
+
+# Phase 2/3 model controls (advisory + paper gating)
+MODEL_PROBABILITY_GATE_ENABLED=true
+MODEL_PROBABILITY_GATE_ENFORCE_PAPER=true
+MODEL_PROBABILITY_GATE_ENFORCE_LIVE=false
+MODEL_PROBABILITY_GATE_MIN_PROB=0.55
+MODEL_PROBABILITY_GATE_REQUIRE_MODEL=false
+MODEL_PROBABILITY_GATE_DISABLE_ON_DRIFT=true
+MODEL_PROBABILITY_GATE_DRIFT_DISABLE_MS=900000
+MODEL_PROBABILITY_GATE_MAX_STALENESS_MS=5000
+MODEL_PREDICTION_TRACE_MAX=100000
+
+# In-process training cadence (no Python dependency in backend container)
+MODEL_TRAINER_ENABLED=true
+MODEL_TRAINER_INTERVAL_MS=120000
+MODEL_TRAINER_MIN_LABELED_ROWS=80
+MODEL_TRAINER_MIN_NEW_LABELS=8
+MODEL_TRAINER_SPLITS=5
+MODEL_TRAINER_PURGE_ROWS=24
+MODEL_TRAINER_EMBARGO_ROWS=24
