Hardening pass: scan contract, entry invariants, strategy pages, and live-fire drill tooling

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,8 @@ LIVE_ORDER_POSTING_ENABLED=false
 LIVE_TRADING_ENABLED=false
 # Local path for persisted strategy trade dataset used by validation harness.
 STRATEGY_TRADE_LOG_PATH=logs/strategy_trades.csv
+# Local path for persisted rejected-signal events (intelligence/model/preflight/live/settlement).
+REJECTED_SIGNAL_LOG_PATH=logs/rejected_signals.jsonl
 # If true, reset validation dataset whenever simulation bankroll/PnL is reset.
 RESET_VALIDATION_TRADES_ON_SIM_RESET=true
 
@@ -92,6 +94,14 @@ MODEL_PROBABILITY_GATE_REQUIRE_MODEL=false
 MODEL_PROBABILITY_GATE_DISABLE_ON_DRIFT=true
 MODEL_PROBABILITY_GATE_DRIFT_DISABLE_MS=900000
 MODEL_PROBABILITY_GATE_MAX_STALENESS_MS=5000
+MODEL_PROBABILITY_GATE_TUNER_ENABLED=true
+MODEL_PROBABILITY_GATE_TUNER_ADVISORY_ONLY=false
+MODEL_PROBABILITY_GATE_TUNER_INTERVAL_MS=120000
+MODEL_PROBABILITY_GATE_TUNER_LOOKBACK_MS=21600000
+MODEL_PROBABILITY_GATE_COUNTERFACTUAL_WINDOW_MS=600000
+MODEL_PROBABILITY_GATE_TUNER_MIN_SAMPLES=60
+MODEL_PROBABILITY_GATE_TUNER_STEP=0.01
+MODEL_PROBABILITY_GATE_TUNER_MAX_DRIFT=0.08
 MODEL_PREDICTION_TRACE_MAX=100000
 
 # In-process training cadence (no Python dependency in backend container)
@@ -102,3 +112,23 @@ MODEL_TRAINER_MIN_NEW_LABELS=8
 MODEL_TRAINER_SPLITS=5
 MODEL_TRAINER_PURGE_ROWS=24
 MODEL_TRAINER_EMBARGO_ROWS=24
+
+# ML-service supervised ensemble signal (XGBoost + sklearn)
+ML_SIGNAL_LABEL_HORIZON_MS=90000
+ML_SIGNAL_LABEL_NEUTRAL_BAND=0.0005
+ML_SIGNAL_MIN_TRAIN_SAMPLES=400
+ML_SIGNAL_MAX_TRAIN_SAMPLES=5000
+ML_SIGNAL_RETRAIN_EVERY_SAMPLES=64
+ML_SIGNAL_MIN_RETRAIN_INTERVAL_MS=45000
+ML_SIGNAL_MIN_CLASS_SAMPLES=40
+ML_SIGNAL_EVAL_MIN_SAMPLES=80
+
+# BTC_5M model-signal gate (additional edge filter)
+BTC_5M_MODEL_SIGNAL_FILTER_ENABLED=true
+BTC_5M_MODEL_SIGNAL_CONFIDENCE_MIN=0.22
+BTC_5M_MODEL_SIGNAL_PENALTY_BPS=90
+BTC_5M_MODEL_SIGNAL_BONUS_BPS=35
+BTC_5M_MODEL_SIGNAL_MIN_SAMPLES=240
+BTC_5M_MODEL_SIGNAL_MIN_AUC=0.52
+BTC_5M_MODEL_SIGNAL_MAX_LOGLOSS=0.72
+BTC_5M_MODEL_SIGNAL_MAX_BRIER=0.28
