--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
         "build": "tsc",
         "dev": "nodemon --exec ts-node src/index.ts",
         "start": "node dist/index.js",
-        "test": "jest",
+        "test": "jest --config ../../jest.config.cjs",
         "lint": "eslint src/**/*.ts"
     },
     "dependencies": {
