Add live canary baseline profile and paper soak reporting workflow

--- a/.env.example
+++ b/.env.example
@@ -132,3 +132,27 @@ BTC_5M_MODEL_SIGNAL_MIN_SAMPLES=240
 BTC_5M_MODEL_SIGNAL_MIN_AUC=0.52
 BTC_5M_MODEL_SIGNAL_MAX_LOGLOSS=0.72
 BTC_5M_MODEL_SIGNAL_MAX_BRIER=0.28
+
+# Portfolio meta-allocator + execution preparation controls
+META_ALLOCATOR_ENABLED=true
+META_ALLOCATOR_META_BLEND=0.65
+META_ALLOCATOR_MIN_OVERLAY=0.55
+META_ALLOCATOR_MAX_OVERLAY=1.45
+META_ALLOCATOR_FAMILY_CONCENTRATION_SOFT_CAP=0.45
+META_ALLOCATOR_COST_DRAG_PENALTY_BPS=25
+EXECUTION_SHORTFALL_OPTIMIZER_ENABLED=true
+EXECUTION_SHORTFALL_TARGET_RETAIN_BPS=18
+EXECUTION_SHORTFALL_MIN_RETAIN_BPS=2
+EXECUTION_SHORTFALL_MAX_SIZE_REDUCTION_PCT=0.75
+EXECUTION_SHORTFALL_MIN_SIGNAL_NOTIONAL_USD=10
+EXECUTION_NETTING_ENABLED=true
+EXECUTION_NETTING_TTL_MS=1200000
+EXECUTION_NETTING_MARKET_CAP_USD=1200
+EXECUTION_NETTING_OPPOSING_BLOCK_RATIO=0.85
+
+# Conservative rollout helpers (see config/live_canary_baseline.env)
+SOAK_MIN_PREFLIGHT_SAMPLES=20
+SOAK_MIN_PREFLIGHT_PASS_RATE_PCT=96
+SOAK_MAX_SHORTFALL_BLOCK_RATE_PCT=18
+SOAK_MAX_NETTING_BLOCK_RATE_PCT=12
+SOAK_MIN_EDGE_CAPTURE_RATIO=0.55
