--- a/config/live_canary_baseline.env
+++ b/config/live_canary_baseline.env
@@ -4,7 +4,8 @@
 # Hard safety latches
 LIVE_ORDER_POSTING_ENABLED=false
 LIVE_TRADING_ENABLED=false
-MODEL_PROBABILITY_GATE_ENFORCE_LIVE=false
+MODEL_PROBABILITY_GATE_ENFORCE_LIVE=true
+MODEL_PROBABILITY_GATE_REQUIRE_MODEL=true
 INTELLIGENCE_GATE_ENABLED=true
 INTELLIGENCE_GATE_MAX_STALENESS_MS=2500
 INTELLIGENCE_GATE_REQUIRE_PEER_CONFIRMATION=true
@@ -17,6 +18,7 @@ STRATEGY_ALLOCATOR_TARGET_SHARPE=0.55
 
 # Meta allocator overlay (portfolio-level)
 META_ALLOCATOR_ENABLED=true
+META_CONTROLLER_ADVISORY_ONLY=false
 META_ALLOCATOR_META_BLEND=0.50
 META_ALLOCATOR_MIN_OVERLAY=0.70
 META_ALLOCATOR_MAX_OVERLAY=1.15
@@ -28,6 +30,17 @@ CROSS_HORIZON_ROUTER_ENABLED=true
 CROSS_HORIZON_ROUTER_CONFIRM_MULT=1.08
 CROSS_HORIZON_ROUTER_CONFLICT_MULT=0.72
 CROSS_HORIZON_ROUTER_MAX_BOOST=1.15
+
+# ML training cadence for canary (require statistically meaningful activation)
+MODEL_TRAINER_ENABLED=true
+MODEL_TRAINER_INTERVAL_MS=60000
+MODEL_TRAINER_MIN_LABELED_ROWS=20
+MODEL_TRAINER_MIN_NEW_LABELS=2
+MODEL_TRAINER_SPLITS=3
+MODEL_TRAINER_PURGE_ROWS=4
+MODEL_TRAINER_EMBARGO_ROWS=4
+MODEL_TRAINER_MIN_TRAIN_ROWS_PER_FOLD=10
+MODEL_TRAINER_MIN_TEST_ROWS_PER_FOLD=4
 
 # Execution shortfall optimizer (protect thin-edge entries)
 EXECUTION_SHORTFALL_OPTIMIZER_ENABLED=true
@@ -47,6 +60,11 @@ POLY_MAX_ORDER_NOTIONAL_USD=120
 POLY_MAX_SIGNAL_NOTIONAL_USD=350
 POLY_EXECUTION_MIN_INTERVAL_MS=2500
 POLY_LIVE_ORDER_TYPE=FOK
+
+# BTC_5M canary risk controls
+BTC_5M_MIN_EXPECTED_NET_RETURN=0.008
+BTC_5M_MAX_POSITION_FRACTION=0.10
+BTC_5M_MAX_ENTRY_SPREAD=0.05
 
 # Optional phased allowlist (when LIVE_ORDER_POSTING_ENABLED=true)
 POLY_LIVE_STRATEGY_ALLOWLIST=BTC_5M,BTC_15M,ETH_5M,ETH_15M,SOL_5M,SOL_15M,ATOMIC_ARB,GRAPH_ARB
