--- a/config/live_canary_baseline.env
+++ b/config/live_canary_baseline.env
@@ -10,6 +10,12 @@ INTELLIGENCE_GATE_ENABLED=true
 INTELLIGENCE_GATE_MAX_STALENESS_MS=2500
 INTELLIGENCE_GATE_REQUIRE_PEER_CONFIRMATION=true
 INTELLIGENCE_GATE_STRONG_MARGIN=0.015
+SCANNER_HEARTBEAT_MAX_AGE_MS=60000
+LEDGER_PNL_PARITY_ENABLED=true
+LEDGER_PNL_PARITY_INTERVAL_MS=30000
+LEDGER_PNL_PARITY_WARN_ABS_USD=2
+LEDGER_PNL_PARITY_CRITICAL_ABS_USD=10
+LEDGER_PNL_PARITY_MIN_PAPER_ROWS=5
 
 # Global sizing posture (conservative)
 STRATEGY_WEIGHT_CAP=1.30
