--- a/.env.example
+++ b/.env.example
@@ -80,10 +80,21 @@ INTELLIGENCE_GATE_CONFIRMATION_WINDOW_MS=5000
 INTELLIGENCE_GATE_REQUIRE_PEER_CONFIRMATION=true
 INTELLIGENCE_GATE_STRONG_MARGIN=0.01
 
+# Scanner heartbeat health (backend /api/arb/bots and readiness)
+SCANNER_HEARTBEAT_MAX_AGE_MS=60000
+SCANNER_OPTIONAL_HEARTBEAT_IDS=
+
 # Concentration + utilization controls (paper ledger)
 SIM_STRATEGY_CONCENTRATION_CAP_PCT=0.35
 SIM_FAMILY_CONCENTRATION_CAP_PCT=0.60
 SIM_GLOBAL_UTILIZATION_CAP_PCT=0.90
+
+# Realized PnL parity watchdog (ledger vs persisted paper trade log)
+LEDGER_PNL_PARITY_ENABLED=true
+LEDGER_PNL_PARITY_INTERVAL_MS=30000
+LEDGER_PNL_PARITY_WARN_ABS_USD=2
+LEDGER_PNL_PARITY_CRITICAL_ABS_USD=10
+LEDGER_PNL_PARITY_MIN_PAPER_ROWS=5
 
 # Phase 2/3 model controls (advisory + paper gating)
 MODEL_PROBABILITY_GATE_ENABLED=true
